--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="navbar">
+                <div class="nav-logo"><img src="img/logo-small.png" alt="logo Dropbox"></div>
+                <ul class="nav-link">
+                    <li><a href="#">Perchè Dropbox</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                    <li><a href="#">Piani e Prezzi</a></li>
+                </ul>
+            </div>
+
+            <div class="navbar">
+                <ul class="nav-link">
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
+                </ul>
+                <button class="button">Inizia</button>
+            </div>
+        </nav>
+    </header>
     
 </body>
 </html>
