--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body>
@@ -30,6 +31,30 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <section class="bg-lightblue">
+            <div class="container-large">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+
+                <div class="jumbotron">
+                    <!-- div con spiegazione -->
+                    <div class="jumbotron-text">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
+                            <br>Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato
+                            per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <button class="button">Inizia la tia prova gratuita</button>
+                        <div class="cancel">Annulla in qualsiasi momento</div>
+                        <div class="arrow"><i class="fa-solid fa-arrow-down"></i></div>
+                    </div>
+
+                    <!-- div con immagine -->
+                    <div class="jumbotron-img"><img src="img/jumbo.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
