--- a/index.html
+++ b/index.html
@@ -54,6 +54,160 @@
                 </div>
             </div>
         </section>
+
+        <section class="container">
+            <h2>Trova il piano business che fa per te</h2>
+            <div>
+                <input type="radio"><label for="radio">Fatturazione mensile</label>
+                <input type="radio"><label for="radio">Fatturazione annuale</label>
+            </div>
+
+            <!-- griglia 3 elementi -->
+            <div class="grid-plan">
+                <div class="plan">
+                    <div class="plan-header">
+                        <i class="fa-solid fa-user"></i>
+                        <span>Singolo</span>
+                    </div>
+                    <div class="plan-body">
+                        <h3>Professional</h3>
+                        <div>€ 12,00</div>
+                        <div class="text">/mese</div>
+
+                        <ul class="plan-list padding-30">
+                            <li>
+                                <i class="fa-solid fa-user"></i>
+                                <span>1 utente</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-folder"></i>
+                                <span>5 Tb di spazio di archiviazione sicuro</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                            </li>
+                        </ul>
+
+                        <button class="button">Prova gratis per 30 giorni</button>
+                        <div class="padding-30">oppure <a href="#">acquista ora</a></div>
+
+                        <div class="line"></div>
+
+                        <h4 class="padding-30">Punti Salienti del piano</h4>
+                        <ul class="plan-list"> 
+                            <li><i class="fa-solid fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                            <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="plan">
+                    <div class="plan-header">
+                        <i class="fa-solid fa-people-group"></i>
+                        <span>Team</span>
+                    </div>
+                    <div class="plan-body">
+                        <h3>Advanced</h3>
+                        <div>€ 18,00</div>
+                        <div class="text">/utente/mese</div>
+
+                        <ul class="plan-list padding-30">
+                            <li>
+                                <i class="fa-solid fa-people-group"></i>
+                                <span>3 o più utenti</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-folder"></i>
+                                <span>Tutto lo spazio di cui ha bisogno il tuo tema</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
+                            </li>
+                        </ul>
+
+                        <button class="button">Prova gratis per 30 giorni</button>
+                        <div class="padding-30">oppure <a href="#">acquista ora</a></div>
+
+                        <div class="line"></div>
+
+                        <h4 class="padding-30">Punti Salienti del piano</h4>
+                        <ul class="plan-list"> 
+                            <li><i class="fa-solid fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                            <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                            <li><i class="fa-solid fa-check"></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
+                            <li><i class="fa-solid fa-check"></i> Possibilità di inserire nuovi membri del team</li>
+                            <li><i class="fa-solid fa-check"></i> Gestione dei permessi in base ai ruoli</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="plan">
+                    <div class="plan-header">
+                        <i class="fa-solid fa-hotel"></i>
+                        <span>Enterprise</span>
+                    </div>
+                    <div class="plan-body">
+                        <h3>Advanced</h3>
+                        <div>Contattateci</div>
+                        <div class="text">-</div>
+
+                        <ul class="plan-list padding-30">
+                            <li>
+                                <i class="fa-solid fa-hotel"></i>
+                                <span>10 o più utenti</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-folder"></i>
+                                <span>Soluzioni personalizzaboli per la tua azienda</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
+                            </li>
+                        </ul>
+
+                        <button class="button">Contattaci</button>
+                        <div class="padding-30">oppure <a href="#">acquista ora</a></div>
+
+                        <div class="line"></div>
+
+                        <h4 class="padding-30">Punti Salienti del piano</h4>
+                        <ul class="plan-list"> 
+                            <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                            <li><i class="fa-solid fa-check"></i> Servizio assistenza 24/h</li>
+                            <li><i class="fa-solid fa-check"></i> Possibilità di personalizzazione totale</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="plan-large">
+                <div class="plan-header">
+                    <i class="fa-solid fa-hotel"></i>
+                    <span>Team</span>
+                </div>
+
+                <div class="plan-body">
+                    <div class="description">
+                        <h3>Enterprise</h3>
+                        <h5 class="padding-30">Contatta l'ufficio vendite per i prezzi</h5>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT 
+                            nella gestione su qualsiasi scala.
+                        </p>
+                    </div>
+
+                    <div class="contact">
+                        <button class="button">Contatta l'ufficio vendite</button>
+                    </div>
+                </div>
+
+            </div>
+
+            
+
+        </section>
     </main>
     
 </body>
