--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </header>
 
     <main>
+        <!-- sezione 1: jumbotron -->
         <section class="bg-lightblue">
             <div class="container-large">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
@@ -55,6 +56,7 @@
             </div>
         </section>
 
+        <!-- sezione 2: griglia -->
         <section class="container">
             <h2>Trova il piano business che fa per te</h2>
             <div>
@@ -146,10 +148,10 @@
                 <div class="plan">
                     <div class="plan-header">
                         <i class="fa-solid fa-hotel"></i>
-                        <span>Enterprise</span>
+                        <span>Azienda</span>
                     </div>
                     <div class="plan-body">
-                        <h3>Advanced</h3>
+                        <h3>Enterprice</h3>
                         <div>Contattateci</div>
                         <div class="text">-</div>
 
@@ -204,9 +206,24 @@
                 </div>
 
             </div>
+        </section>
 
-            
+        <!-- sezione 3: immagine + testp -->
+        <section class="container">
+            <div class="row">
+                <div class="col col-img">
+                    <img src="img/partner.png" alt="">
+                </div>
 
+                <div class="col col-text">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p class="padding-30">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi
+                        necessari per raggiungere i tuoi obiettivi aziendali, tra cui l'implementazione,
+                        integrazione, gestione e supporto continui.
+                    </p>
+                    <button class="button">Trova un partner</button>
+                </div>
+            </div>
         </section>
     </main>
     
