--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
         </section>
 
-        <!-- sezione 3: immagine + testp -->
+        <!-- sezione 3: immagine + testo -->
         <section class="container">
             <div class="row">
                 <div class="col col-img">
@@ -225,6 +225,80 @@
                 </div>
             </div>
         </section>
+
+        <!-- sezione 4: griglia a 6 card -->
+        <section class="container">
+            <h2>Esegui più operazioni con Dropbox Business</h2>
+
+            <div class="grid-card">
+                <div class="card">
+                    <div class="card-img"><img src="img/business-feature-switching-tools.png" alt=""></div>
+                    <div>
+                        <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
+                            condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e 
+                            Dropbox Paper direttamente da Dropbox.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img"><img src="img/business-feature-send-files-it.png" alt=""></div>
+                    <div>
+                        <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
+                            condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e 
+                            Dropbox Paper direttamente da Dropbox.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img"><img src="img/business-feature-coordinate-it.png" alt=""></div>
+                    <div>
+                        <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
+                            condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e 
+                            Dropbox Paper direttamente da Dropbox.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img"><img src="img/business-feature-integrations-it.png" alt=""></div>
+                    <div>
+                        <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
+                            condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e 
+                            Dropbox Paper direttamente da Dropbox.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img"><img src="img/business-feature-multi-device.png" alt=""></div>
+                    <div>
+                        <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
+                            condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e 
+                            Dropbox Paper direttamente da Dropbox.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img"><img src="img/business-feature-security.png" alt=""></div>
+                    <div>
+                        <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
+                            condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e 
+                            Dropbox Paper direttamente da Dropbox.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
     
 </body>
