--- a/index.html
+++ b/index.html
@@ -298,6 +298,17 @@
             </div>
         </section>
 
+        <!-- sezione 5 -->
+        <section class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                    <a href="#">Scropi di più sui nostri clienti</a>
+                </div>
+                <div class="col-text"></div>
+            </div>
+        </section>
+
 
     </main>
     
