--- a/index.html
+++ b/index.html
@@ -309,6 +309,21 @@
             </div>
         </section>
 
+        <!-- sezione 6 -->
+        <section class="bg-lightblue">
+            <div class="container">
+                <div class="row">
+                    <div class="col-title">
+                        <h2>Porta Dropbox Business nella tua azieda</h2>
+                    </div>
+                    <div class="col-button">
+                        <button class="button">Inizia a tua prova gratuita</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- sezione7: domande frequenti -->
 
     </main>
     
