--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <nav>
-            <div class="navbar">
-                <div class="nav-logo"><img src="img/logo-small.png" alt="logo Dropbox"></div>
+            <div class="navbar row">
+                <div class="nav-logo"><img src="img/logo-small.png" alt="logo Dropbox" class="block-img"></div>
                 <ul class="nav-link">
                     <li><a href="#">Perchè Dropbox</a></li>
                     <li><a href="#">Funzioni</a></li>
@@ -21,7 +21,7 @@
                 </ul>
             </div>
 
-            <div class="navbar">
+            <div class="navbar row">
                 <ul class="nav-link">
                     <li><a href="#">Supporto</a></li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
@@ -38,20 +38,20 @@
             <div class="container-large">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
 
-                <div class="jumbotron">
+                <div class="jumbotron row">
                     <!-- div con spiegazione -->
-                    <div class="jumbotron-text">
+                    <div class="jumbotron-text col-40">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
                             <br>Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato
                             per ottimizzare il flusso di lavoro esistente.
                         </p>
-                        <button class="button">Inizia la tia prova gratuita</button>
-                        <div class="cancel">Annulla in qualsiasi momento</div>
+                        <button class="button padding-30">Inizia la tia prova gratuita</button>
+                        <div class="padding-30">Annulla in qualsiasi momento</div>
                         <div class="arrow"><i class="fa-solid fa-arrow-down"></i></div>
                     </div>
 
                     <!-- div con immagine -->
-                    <div class="jumbotron-img"><img src="img/jumbo.png" alt=""></div>
+                    <div class="jumbotron-img col-60"><img src="img/jumbo.png" alt="" class="block-img"></div>
                 </div>
             </div>
         </section>
@@ -65,8 +65,8 @@
             </div>
 
             <!-- griglia 3 elementi -->
-            <div class="grid-plan">
-                <div class="plan">
+            <div class="grid-plan row padding-30">
+                <div class="plan col-30">
                     <div class="plan-header">
                         <i class="fa-solid fa-user"></i>
                         <span>Singolo</span>
@@ -83,7 +83,7 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-folder"></i>
-                                <span>5 Tb di spazio di archiviazione sicuro</span>
+                                <span>5 TB di spazio di archiviazione sicuro</span>
                             </li>
                             <li>
                                 <i class="fa-solid fa-share-nodes"></i>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
 
-                <div class="plan">
+                <div class="plan col-30">
                     <div class="plan-header">
                         <i class="fa-solid fa-people-group"></i>
                         <span>Team</span>
@@ -121,7 +121,7 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-folder"></i>
-                                <span>Tutto lo spazio di cui ha bisogno il tuo tema</span>
+                                <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
                             </li>
                             <li>
                                 <i class="fa-solid fa-share-nodes"></i>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
 
-                <div class="plan">
+                <div class="plan col-30">
                     <div class="plan-header">
                         <i class="fa-solid fa-hotel"></i>
                         <span>Azienda</span>
@@ -191,8 +191,8 @@
                     <span>Team</span>
                 </div>
 
-                <div class="plan-body">
-                    <div class="description">
+                <div class="plan-body row">
+                    <div class="description col-70">
                         <h3>Enterprise</h3>
                         <h5 class="padding-30">Contatta l'ufficio vendite per i prezzi</h5>
                         <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT 
@@ -200,7 +200,7 @@
                         </p>
                     </div>
 
-                    <div class="contact">
+                    <div class="contact col-30">
                         <button class="button">Contatta l'ufficio vendite</button>
                     </div>
                 </div>
@@ -211,11 +211,11 @@
         <!-- sezione 3: immagine + testo -->
         <section class="container">
             <div class="row">
-                <div class="col col-img">
-                    <img src="img/partner.png" alt="">
+                <div class="col-60">
+                    <img src="img/partner.png" alt="" class="block-img">
                 </div>
 
-                <div class="col col-text">
+                <div class="col-40 col-text">
                     <h3>Entra in contatto con un partner Dropbox</h3>
                     <p class="padding-30">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi
                         necessari per raggiungere i tuoi obiettivi aziendali, tra cui l'implementazione,
@@ -230,9 +230,9 @@
         <section class="container">
             <h2>Esegui più operazioni con Dropbox Business</h2>
 
-            <div class="grid-card">
-                <div class="card">
-                    <div class="card-img"><img src="img/business-feature-switching-tools.png" alt=""></div>
+            <div class="grid-card row">
+                <div class="card col-30 padding-30">
+                    <div class="card-img"><img src="img/business-feature-switching-tools.png" alt="" class="block-img"></div>
                     <div>
                         <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
@@ -242,8 +242,8 @@
                     </div>
                 </div>
 
-                <div class="card">
-                    <div class="card-img"><img src="img/business-feature-send-files-it.png" alt=""></div>
+                <div class="card col-30 padding-30">
+                    <div class="card-img"><img src="img/business-feature-send-files-it.png" alt="" class="block-img"></div>
                     <div>
                         <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
@@ -253,8 +253,8 @@
                     </div>
                 </div>
 
-                <div class="card">
-                    <div class="card-img"><img src="img/business-feature-coordinate-it.png" alt=""></div>
+                <div class="card col-30 padding-30">
+                    <div class="card-img"><img src="img/business-feature-coordinate-it.png" alt="" class="block-img"></div>
                     <div>
                         <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
@@ -264,8 +264,8 @@
                     </div>
                 </div>
 
-                <div class="card">
-                    <div class="card-img"><img src="img/business-feature-integrations-it.png" alt=""></div>
+                <div class="card col-30 padding-30">
+                    <div class="card-img"><img src="img/business-feature-integrations-it.png" alt="" class="block-img"></div>
                     <div>
                         <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
@@ -275,8 +275,8 @@
                     </div>
                 </div>
 
-                <div class="card">
-                    <div class="card-img"><img src="img/business-feature-multi-device.png" alt=""></div>
+                <div class="card col-30 padding-30">
+                    <div class="card-img"><img src="img/business-feature-multi-device.png" alt="" class="block-img"></div>
                     <div>
                         <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
@@ -285,8 +285,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-img"><img src="img/business-feature-security.png" alt=""></div>
+                <div class="card col-30 padding-30">
+                    <div class="card-img"><img src="img/business-feature-security.png" alt="" class="block-img"></div>
                     <div>
                         <h3 class="padding-30">Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e 
@@ -309,7 +309,9 @@
             </div>
         </section>
 
-        <!-- sezione 6 -->
+        <!-- sezione6: blocchi quadrati -->
+
+        <!-- sezione7 -->
         <section class="bg-lightblue">
             <div class="container">
                 <div class="row">
@@ -323,12 +325,12 @@
             </div>
         </section>
 
-        <!-- sezione7: domande frequenti -->
+        <!-- sezione8: domande frequenti -->
     </main>
     
     <footer>
-        <div class="container-footer">
-            <div class="foot-row">
+        <div class="container-large container-footer">
+            <div class="row foot-row">
                 <div class="foot-col">
                     <h4 class="padding-30">Dropbox</h4>
                     <ul>
