--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
                             </li>
                         </ul>
 
-                        <button class="button">Prova gratis per 30 giorni</button>
+                        <button class="button btn-large">Prova gratis per 30 giorni</button>
                         <div class="padding-30">oppure <a href="#">acquista ora</a></div>
 
                         <div class="line"></div>
 
                         <h4 class="padding-30">Punti Salienti del piano</h4>
                         <ul class="plan-list"> 
-                            <li><i class="fa-solid fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
-                            <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Cartelle offline su dispositivi mobili</li>
                         </ul>
                     </div>
                 </div>
@@ -129,18 +129,18 @@
                             </li>
                         </ul>
 
-                        <button class="button">Prova gratis per 30 giorni</button>
+                        <button class="button btn-large">Prova gratis per 30 giorni</button>
                         <div class="padding-30">oppure <a href="#">acquista ora</a></div>
 
                         <div class="line"></div>
 
                         <h4 class="padding-30">Punti Salienti del piano</h4>
                         <ul class="plan-list"> 
-                            <li><i class="fa-solid fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
-                            <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                            <li><i class="fa-solid fa-check"></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
-                            <li><i class="fa-solid fa-check"></i> Possibilità di inserire nuovi membri del team</li>
-                            <li><i class="fa-solid fa-check"></i> Gestione dei permessi in base ai ruoli</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Cartelle offline su dispositivi mobili</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Possibilità di inserire nuovi membri del team</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Gestione dei permessi in base ai ruoli</li>
                         </ul>
                     </div>
                 </div>
@@ -170,16 +170,16 @@
                             </li>
                         </ul>
 
-                        <button class="button">Contattaci</button>
+                        <button class="button btn-large">Contattaci</button>
                         <div class="padding-30">oppure <a href="#">acquista ora</a></div>
 
                         <div class="line"></div>
 
                         <h4 class="padding-30">Punti Salienti del piano</h4>
                         <ul class="plan-list"> 
-                            <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
-                            <li><i class="fa-solid fa-check"></i> Servizio assistenza 24/h</li>
-                            <li><i class="fa-solid fa-check"></i> Possibilità di personalizzazione totale</li>
+                            <li><i class="fa-solid fa-check check-blue"></i>Cartelle offline su dispositivi mobili</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Servizio assistenza 24/h</li>
+                            <li><i class="fa-solid fa-check check-blue"></i> Possibilità di personalizzazione totale</li>
                         </ul>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                     </div>
 
                     <div class="contact col-30">
-                        <button class="button">Contatta l'ufficio vendite</button>
+                        <button class="button btn-large">Contatta l'ufficio vendite</button>
                     </div>
                 </div>
 
@@ -221,7 +221,7 @@
                         necessari per raggiungere i tuoi obiettivi aziendali, tra cui l'implementazione,
                         integrazione, gestione e supporto continui.
                     </p>
-                    <button class="button">Trova un partner</button>
+                    <button class="button btn-white">Trova un partner</button>
                 </div>
             </div>
         </section>
@@ -319,7 +319,7 @@
                         <h2>Porta Dropbox Business nella tua azieda</h2>
                     </div>
                     <div class="col-button padding-30">
-                        <button class="button">Inizia a tua prova gratuita</button>
+                        <button class="button btn-large-white">Inizia a tua prova gratuita</button>
                     </div>
                 </div>
             </div>
