--- a/index.html
+++ b/index.html
@@ -326,6 +326,22 @@
         </section>
 
         <!-- sezione8: domande frequenti -->
+        <section class="container question padding-30">
+            <h2>Domande Frequenti</h2>
+            <div class="question-list">
+                <div class="padding-30">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+
+                <div class="padding-30">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+
+                <div class="padding-30">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer>
