--- a/index.html
+++ b/index.html
@@ -310,6 +310,32 @@
         </section>
 
         <!-- sezione6: blocchi quadrati -->
+        <section class="company row">
+            <div class="row grid-company">
+                <div class="box-green"><img src="img/designit.svg" alt=""></div>
+                <div class="box-brown"><img src="img/arizona_state_university.svg" alt=""></div>
+                <div class="box-blue"><img src="img/university_of_florida.svg" alt=""></div>
+                <div class="box-red"><img src="img/topps.svg" alt=""></div>
+            </div>
+
+            <div class="designt-company">
+                <img src="img/designit.svg" alt="">
+                <div class="line"></div>
+                <p class="padding-30">"I memebri del nostro tema lavorano costantemente in Paesi, fusi orari e 
+                    uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze,
+                    ma nessuna è facile quanto Dropbox e Dropboxpaper. Ora molte soluzioni sono compatibili con queste esigenze,
+                    ma nessuna è facile quanto Dropbox e Dropboxpaper" 
+                </p>
+                <div>Morten Thomsen, Global IT Lead </div>
+            </div>
+
+            <div class="row grid-company">
+                <div class="box-bordeaux"><img src="img/world_bicycle_relief.svg" alt=""></div>
+                <div class="box-lightblue"><img src="img/hearst_corp.svg" alt=""></div>
+                <div class="box-nightblue"><img src="img/lonely_planet.svg" alt=""></div>
+                <div class="box-yellow"><img src="img/clear_channel.svg" alt=""></div>
+            </div>
+        </section>
 
         <!-- sezione7 -->
         <section class="bg-lightblue">
