--- a/index.html
+++ b/index.html
@@ -301,21 +301,21 @@
         <!-- sezione 5 -->
         <section class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-60">
                     <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
                     <a href="#">Scropi di più sui nostri clienti</a>
                 </div>
-                <div class="col-text"></div>
+                <div class="col-40"></div>
             </div>
         </section>
 
         <!-- sezione6: blocchi quadrati -->
         <section class="company row">
             <div class="row grid-company">
-                <div class="box-green"><img src="img/designit.svg" alt=""></div>
-                <div class="box-brown"><img src="img/arizona_state_university.svg" alt=""></div>
-                <div class="box-blue"><img src="img/university_of_florida.svg" alt=""></div>
-                <div class="box-red"><img src="img/topps.svg" alt=""></div>
+                <div class="box-green row-box"><img src="img/designit.svg" alt="" class="block-img"></div>
+                <div class="box-brown row-box"><img src="img/arizona_state_university.svg" alt="" class="block-img"></div>
+                <div class="box-blue row-box"><img src="img/university_of_florida.svg" alt="" class="block-img"></div>
+                <div class="box-red row-box"><img src="img/topps.svg" alt="" class="block-img"></div>
             </div>
 
             <div class="designt-company">
@@ -330,10 +330,10 @@
             </div>
 
             <div class="row grid-company">
-                <div class="box-bordeaux"><img src="img/world_bicycle_relief.svg" alt=""></div>
-                <div class="box-lightblue"><img src="img/hearst_corp.svg" alt=""></div>
-                <div class="box-nightblue"><img src="img/lonely_planet.svg" alt=""></div>
-                <div class="box-yellow"><img src="img/clear_channel.svg" alt=""></div>
+                <div class="box-bordeaux row-box"><img src="img/world_bicycle_relief.svg" alt="" class="block-img"></div>
+                <div class="box-lightblue row-box"><img src="img/hearst_corp.svg" alt="" class="block-img"></div>
+                <div class="box-nightblue row-box"><img src="img/lonely_planet.svg" alt="" class="block-img"></div>
+                <div class="box-yellow row-box"><img src="img/clear_channel.svg" alt="" class="block-img"></div>
             </div>
         </section>
 
