--- a/index.html
+++ b/index.html
@@ -60,8 +60,17 @@
         <section class="container">
             <h2>Trova il piano business che fa per te</h2>
             <div>
-                <input type="radio"><label for="radio">Fatturazione mensile</label>
-                <input type="radio"><label for="radio">Fatturazione annuale</label>
+                <label class="input-text">
+                    <input type="radio" name="piano" class="radio">
+                    <span class="radio-circle"></span>
+                    Fatturazione mensile
+                </label>
+                
+                <label>
+                    <input type="radio" name="piano" class="radio"> 
+                    <span class="radio-circle"></span>
+                    Fatturazione annuale
+                </label>
             </div>
 
             <!-- griglia 3 elementi -->
