--- a/index.html
+++ b/index.html
@@ -15,16 +15,47 @@
             <div class="navbar row">
                 <div class="nav-logo"><img src="img/logo-small.png" alt="logo Dropbox" class="block-img"></div>
                 <ul class="nav-link">
-                    <li><a href="#">Perchè Dropbox</a></li>
-                    <li><a href="#">Funzioni</a></li>
-                    <li><a href="#">Piani e Prezzi</a></li>
+                    <li><a href="#">Perchè Dropbox</a>
+                        <ul class="list-drop">
+                            <li><a href="#">Ispirati</a></li>
+                            <li><a href="#">Cosa dicono i clienti</a></li>
+                            <li><a href="#">Integrazioni di app</a></li>
+                            <li><a href="#">Risorse</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Funzioni</a>
+                        <ul class="list-drop">
+                            <li><a href="#">Dropbox</a></li>
+                            <li><a href="#">Backup</a></li>
+                            <li><a href="#">Hellosign</a></li>
+                            <li><a href="#">Docsend</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Piani e Prezzi</a>
+                        <ul class="list-drop">
+                            <li><a href="#">Ispirati</a></li>
+                            <li><a href="#">Cosa dicono i clienti</a></li>
+                            <li><a href="#">Integrazioni di app</a></li>
+                            <li><a href="#">Risorse</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
 
             <div class="navbar row">
                 <ul class="nav-link">
-                    <li><a href="#">Supporto</a></li>
-                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Supporto</a>
+                        <ul class="list-drop">
+                            <li><a href="#">Centro assistenza</a></li>
+                            <li><a href="#">Forum della community</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Contatta l'ufficio vendite</a>
+                        <ul class="list-drop">
+                            <li><a href="#">Invia email</a></li>
+                            <li><a href="#">Chat</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Accedi</a></li>
                 </ul>
                 <button class="button">Inizia</button>
@@ -65,7 +96,7 @@
                     <span class="radio-circle"></span>
                     Fatturazione mensile
                 </label>
-                
+
                 <label>
                     <input type="radio" name="piano" class="radio"> 
                     <span class="radio-circle"></span>
