--- a/index.html
+++ b/index.html
@@ -394,17 +394,30 @@
         <!-- sezione8: domande frequenti -->
         <section class="container question padding-30">
             <h2>Domande Frequenti</h2>
+
             <div class="question-list">
-                <div class="padding-30">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
+                <div class="padding-30 row accordion-title" tabindex="-1">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
                     <i class="fa-solid fa-angle-down"></i>
+                    <div class="accordion-text">
+                        <p class="padding-30">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, sed quis eius inventore dolore ipsum numquam pariatur amet autem soluta eos velit. Ipsum sunt culpa, nostrum repellendus id vero architecto.</p>
+                        <a href="#">Lorem ipsmun dolor</a>
+                    </div>
                 </div>
 
-                <div class="padding-30">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
+                <div class="padding-30 row accordion-title" tabindex="-1"">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
                     <i class="fa-solid fa-angle-down"></i>
+                    <div class="accordion-text">
+                        <p class="padding-30">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, sed quis eius inventore dolore ipsum numquam pariatur amet autem soluta eos velit. Ipsum sunt culpa, nostrum repellendus id vero architecto.</p>
+                        <a href="#">Lorem ipsmun dolor</a>
+                    </div>
                 </div>
 
-                <div class="padding-30">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
+                <div class="padding-30 row accordion-title" tabindex="-1"">Qual è la differenza tra Dropbox business Standard e Dropbox Business Adavnced 
                     <i class="fa-solid fa-angle-down"></i>
+                    <div class="accordion-text">
+                        <p class="padding-30">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, sed quis eius inventore dolore ipsum numquam pariatur amet autem soluta eos velit. Ipsum sunt culpa, nostrum repellendus id vero architecto.</p>
+                        <a href="#">Lorem ipsmun dolor</a>
+                    </div>
                 </div>
             </div>
         </section>
